--- a/styles/utility.css
+++ b/styles/utility.css
@@ -12,6 +12,13 @@
     font-weight: 700;
 }
 
+.section-description {
+    color: var(--Dark-03, #727272);
+    font-weight: 400;
+    line-height: 1.6rem;
+    margin: 2rem 0px;
+}
+
 .button-primary {
     color: #FFF;
     font-size: 1.2rem;
@@ -19,5 +26,11 @@
     border-radius: 8px;
     border: 0;
     background: #FF900E;
-    padding:1.2rem 1.56rem ;;
+    padding:1.2rem 1.56rem ;
+    cursor: pointer;
+}
+
+.button-primary:hover{
+    background-color: #894900;
+    font-size: 1.15rem;
 }
